samples/_failures_safe/1761345694_4fa0b6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ecb28d3e.c: In function ‘main’:
./samples/SAFE/__tmp_ecb28d3e.c:134:11: error: expected ‘;’ at end of input
  134 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_ecb28d3e.c:134:5: error: expected declaration or statement at end of input
  134 |     printf
      |     ^~~~~~
